--- a/layouts/partials/edit_post.html
+++ b/layouts/partials/edit_post.html
@@ -1,8 +1,14 @@
-{{- if and (or .Params.editPost.URL site.Params.editPost.URL) (not (.Param "editPost.disabled")) -}}
+{{- $editPostURL := .Params.editPost.URL | default site.Params.editPost.URL -}}
+{{- $editPostText := .Params.editPost.Text | default site.Params.editPost.Text -}}
+{{- if and (or $editPostURL $editPostText) (not (.Param "editPost.disabled")) -}}
 {{- $fileUrlPath := path.Join .File.Path }}
 
 {{- if or .Params.author site.Params.author (.Param "ShowReadingTime") (not .Date.IsZero) .IsTranslated }}&nbsp;&middot;&nbsp;{{- end -}}
-<a href="{{ .Params.editPost.URL | default site.Params.editPost.URL }}{{ if .Params.editPost.appendFilePath | default ( site.Params.editPost.appendFilePath | default false ) }}/{{ $fileUrlPath }}{{ end }}" rel="noopener noreferrer" target="_blank">
-    {{- .Params.editPost.Text | default (site.Params.editPost.Text | default (i18n "edit_post" | default "Edit")) -}}
+{{- if $editPostURL -}}
+<a href="{{ $editPostURL }}{{ if .Params.editPost.appendFilePath | default ( site.Params.editPost.appendFilePath | default false ) }}/{{ $fileUrlPath }}{{ end }}" rel="noopener noreferrer" target="_blank">
+    {{- $editPostText | default (i18n "edit_post" | default "Edit") -}}
 </a>
+{{- else -}}
+<span>{{- $editPostText -}}</span>
+{{- end -}}
 {{- end }}
